--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+        "shopify-buy": "^2.17.0"
   },
   "scripts": {
     "start": "craco start",
