--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,7 @@
   },
   "scripts": {
     "start": "craco start",
-        "build": "react-scripts build",
+        "build": "craco build",
     "test": "craco test"
   },
   "browserslist": {
