--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,10 +57,11 @@
     "zod": "^3.24.4"
   },
   "scripts": {
-    "start": "craco start",
-        "build": "craco build",
-    "test": "craco test"
-  },
+  "start": "craco start",
+  "build": "craco build",
+  "test": "craco test",
+  "eject": "react-scripts eject"
+},
   "browserslist": {
     "production": [
       ">0.2%",
