--- a/frontend/.env
+++ b/frontend/.env
@@ -7,3 +7,8 @@ REACT_APP_CHECKOUT_DOMAIN=https://checkout.fitgearzzz.com
 
 # Custom Account Domain
 REACT_APP_ACCOUNT_DOMAIN=https://account.fitgearzzz.com
+
+SHOPIFY_CUSTOMER_API_CLIENT_ID=49163ae9-7e32-4d93-a29c-d9fb330124c5
+SHOPIFY_ACCOUNT_DOMAIN=account.fitgearzzz.com
+SHOPIFY_OAUTH_REDIRECT_URI=https://fitgearzzz.com/auth/callback
+
